@@ -12,6 +12,9 @@
 
 	* man/news.texi: updated
 
+	* lisp/sawfish/wm/xmodmap.jl: xmodmap module, supports loading a
+	modmap file, saving original state and restoring original state
+
 2012-09-06  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/state/transient.jl: :after-set for
 	decorate-transients
